--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I miss Nerissa very much">
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title id="title">I MISS NERISSA</title>
     
@@ -13,8 +13,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="I MISS NERISSA" />
     <meta property="og:description" content="NERISSA PLEASE COME BACK" />
-    <meta name="twitter:image" content="https://i.imgur.com/jHo0ZTi.png" />
-    <meta property="og:image" content="https://i.imgur.com/jHo0ZTi.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico">
     <meta property="og:url" content="imissnerissa.com" />
     
     <!-- JavaScript files -->
