--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         <footer>
             <!-- Credits and acknowledgments -->
             <a href="https://twitter.com/yushirizu">made by @yushirizu</a><br>  
-            Very heavily "inspired" by <a class="fauna" href="https://imissfauna.com/">imissfauna.com and stolen from potato / imissmumei.com</a><br>
+            Very heavily "inspired" by <a class="fauna" href="https://imissfauna.com/">imissfauna.com</a> and stolen from potato / <a class="fauna" href="https://imissmumei.com/">imissmumei.com</a><br>
         </footer>
         <!-- JavaScript file for timer functionality -->
         <script src="timer.js"></script> 
     </div>
+      
 </body>
 </html>
