--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <body>
     <!-- Main content container -->
     <div class="main">
-        <!-- Displays an image linked to a Twitter profile -->
+        <!-- Displays a slideshow of images -->
         <div id="image" class="center">
-            <a href="https://twitter.com/nerissa_en">
-                <span id="result" class="center"></span> 
+            <!-- Wrap the image with the anchor tag to link to Twitter page -->
+            <a href="https://twitter.com/nerissa_en" target="_blank" id="twitter-link">
+                <span id="result" class="center"></span>
             </a>
         </div>
         <!-- Displays the status of whether she's streaming or not -->
