--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <!-- Meta information for the page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I miss Nerissa very much">
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico">
+    <meta name="description" content="I miss shiori very much">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Yushirizu/imissshiori/main/assets/favicon.ico">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title id="title">I MISS NERISSA</title>
+    <title id="title">I MISS shiori</title>
     
     <!-- Twitter card metadata for social sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="I MISS NERISSA" />
-    <meta property="og:description" content="NERISSA PLEASE COME BACK" />
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico">
-    <meta property="og:url" content="imissnerissa.com" />
+    <meta property="og:title" content="I MISS shiori" />
+    <meta property="og:description" content="shiori PLEASE COME BACK" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Yushirizu/imissshiori/main/assets/favicon.ico" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Yushirizu/imissshiori/main/assets/favicon.ico">
+    <meta property="og:url" content="imissshiori.com" />
     
     <!-- JavaScript files -->
     <script src="random.js"></script>
@@ -26,7 +26,7 @@
         <!-- Displays a slideshow of images -->
         <div id="image" class="center">
             <!-- Wrap the image with the anchor tag to link to Twitter page -->
-            <a href="https://twitter.com/nerissa_en" target="_blank" id="twitter-link">
+            <a href="https://twitter.com/shiori_en" target="_blank" id="twitter-link">
                 <span id="result" class="center"></span>
             </a>
         </div>
