--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="NERISSA PLEASE COME BACK" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Yushirizu/imissnerissa/main/assets/favicon.ico">
-    <meta property="og:url" content="imissnerissa.com" />
+    <meta property="og:url" content="https://imissrissa.z28.web.core.windows.net/" />
     
     <!-- JavaScript files -->
     <script src="random.js"></script>
@@ -23,12 +23,9 @@
 <body>
     <!-- Main content container -->
     <div class="main">
-        <!-- Displays a slideshow of images -->
         <div id="image" class="center">
             <!-- Wrap the image with the anchor tag to link to Twitter page -->
-
             <a href="https://twitter.com/nerissa_en" target="_blank" id="twitter-link">
-e598d8cd2e586b08f0b977b5f6739c8dbda7d8cf
                 <span id="result" class="center"></span>
             </a>
         </div>
